Open github fork on separate window

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="index.js" defer></script>
   </head>
   <body>
-    <a href="https://github.com/attach-live/attach-chat-starter" class="ribbon"
+    <a href="https://github.com/attach-live/attach-chat-starter" class="ribbon" target="_blank"
       ><img
         width="149"
         height="149"
