--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       content="https://codepen.io/attach/pen/WYNzKE"
     />
     <!-- Start code for dynamically modifying SDK properties last -->
+    <script src="helpers.js" defer></script>
+    <script src="listeners.js" defer></script>
     <script src="index.js" defer></script>
   </head>
   <body>
@@ -49,7 +51,7 @@
     <div class="container">
       <section class="section customize">
         <div class="item">
-          <div class="title">Pick a shape<div class="current-value shape"></div></div>
+          <div class="title"><span>Pick a shape for avatars</span><div class="picker-value shape circle"></div></div>
           <div class="shape__list pick__list">
             <input id="round" type="radio" name="shape" value="round" checked />
             <label for="round" class="shape circle"></label>
@@ -62,11 +64,11 @@
           </div>
         </div>
         <div class="item">
-          <div class="title">Pick a viewer color<div class="current-value color viewer circle"></div></div>
+          <div class="title"><span>Pick a viewer color</span><div class="picker-value color viewer circle"></div></div>
           <div class="color__list pick__list" id="color-viewer"></div>
         </div>
         <div class="item">
-          <div class="title">Pick an editor color<div class="current-value color editor circle"></div></div>
+          <div class="title"><span>Pick an editor color</span><div class="picker-value color editor circle"></div></div>
           <div class="color__list pick__list" id="color-editor"></div>
         </div>
       </section>
