Use sdk property values as classes. Separate properties update logic

--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
     <div class="container">
       <section class="section customize">
         <div class="item">
-          <div class="title"><span>Pick a shape for avatars</span><div class="picker-value shape circle"></div></div>
+          <div class="title"><span>Pick a shape for avatars</span><div class="picker-value shape round"></div></div>
           <div class="shape__list pick__list">
             <input id="round" type="radio" name="shape" value="round" checked />
-            <label for="round" class="shape circle"></label>
+            <label for="round" class="shape round"></label>
 
             <input id="rounded" type="radio" name="shape" value="rounded" />
-            <label for="rounded" class="shape square-rounded"></label>
+            <label for="rounded" class="shape rounded"></label>
 
             <input id="square" type="radio" name="shape" value="square" />
             <label for="square" class="shape square"></label>
           </div>
         </div>
         <div class="item">
-          <div class="title"><span>Pick a viewer color</span><div class="picker-value color viewer circle"></div></div>
+          <div class="title"><span>Pick a viewer color</span><div class="picker-value color viewer round"></div></div>
           <div class="color__list pick__list" id="color-viewer"></div>
         </div>
         <div class="item">
-          <div class="title"><span>Pick an editor color</span><div class="picker-value color editor circle"></div></div>
+          <div class="title"><span>Pick an editor color</span><div class="picker-value color editor round"></div></div>
           <div class="color__list pick__list" id="color-editor"></div>
         </div>
       </section>
