Add production API key and site-verification code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			The API key is only valid in the original repo. To prevent video and chat from timing out early,
 			get your own free API key at https://platform.attach.live
 		-->
-		<meta property="attach:api-key" content="dev_web_6qIeGh5DceAIr8t-zf2ElogpEEgx-IDQk" />
+		<meta property="attach:api-key" content="prod_web_KELTsQOOsPfb-26GpiT-WemhKwEIXCGw" />
+		<meta property="attach:site-verification" content="mgalngBcMf727nRQ3L2iiaSiz7j2pmjb" />
 
 		<!--
 			The room URL links the room to a CodePen. Open the Pen in a separate browser window to connect.
