Fix normalize reference

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			type="image/x-icon"
 		/>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" />
-		<link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
 		<link rel="stylesheet" href="style.css" />
 		<script src="color-picker.js" defer></script>
 
